--- a/musicapp/index.html
+++ b/musicapp/index.html
@@ -299,7 +299,7 @@
       }
       resultsSection.innerHTML = "Searching...";
       try {
-        const response = await fetch(`https://itunes.apple.com/search?term=${encodeURIComponent(query)}&entity=song&limit=10`);
+        const response = await fetch(``);
         const data = await response.json();
         displayResults(data.results);
       } catch (error) {
