--- a/AIImageGenerator/index.html
+++ b/AIImageGenerator/index.html
@@ -26,7 +26,7 @@
             
             <!-- Section for page headings -->
             <div class="headings-container">
-                <h1>GeeksforGeeks</h1> <!-- Main heading -->
+                <h1>Image Generator </h1> <!-- Main heading -->
                 <h2 class="heading">
                   	AI Image generator website using JavaScript
                 </h2> <!-- Secondary heading explaining the purpose -->
